Fix overflow new sidebar menu in atum template

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -5,6 +5,7 @@
   min-height: calc(100vh - 69px);
   background-color: var(--atum-sidebar-bg);
   box-shadow: 0 0 20px -10px var(--atum-bg-dark-50);
+  overflow-x: hidden;
 
   .sidebar-sticky {
     position: sticky;
